[package]
name = "async-sandbox"
version = "0.1.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.2"
rand = "0.7.3"
tokio = {version = "0.2.11", features = ["time"]}
